Sonar: Rename field headers to prevent any misunderstanding/clash with field HEADERS